--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,11 @@
+$brand-color: #004d99;
+
 html,
 body {
-  margin: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: #f5f5f5;
 }
+
+@import 'index';
