--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,46 @@
 html,
 body {
-  margin: 0; }
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  background: #f5f5f5; }
+
+main#index {
+  height: 100%;
+  padding-bottom: 150px;
+  display: flex;
+  align-items: center; }
+  main#index .container {
+    text-align: center; }
+    main#index .container #logo {
+      display: block;
+      margin-bottom: 36px; }
+      main#index .container #logo img {
+        height: 120px; }
+    main#index .container .welcome-msg {
+      color: #666;
+      font-size: 1.5rem;
+      line-height: 36px; }
+    main#index .container .login-card {
+      margin: 24px auto;
+      max-width: 600px; }
+      main#index .container .login-card .card-action {
+        text-align: right; }
+      main#index .container .login-card form i.active {
+        color: #004d99; }
+      main#index .container .login-card form label {
+        text-align: left; }
+      main#index .container .login-card form input[type=text]:focus:not([readonly]) + label,
+      main#index .container .login-card form input[type=password]:focus:not([readonly]) + label {
+        color: #004d99; }
+      main#index .container .login-card form input[type=text]:focus:not([readonly]),
+      main#index .container .login-card form input[type=password]:focus:not([readonly]) {
+        box-shadow: 0 1px 0 0 #004d99;
+        border-bottom: 1px solid #004d99; }
+      main#index .container .login-card form span.result {
+        font-size: 0.9rem;
+        font-weight: bold; }
+        main#index .container .login-card form span.result.error {
+          color: #F05D5E; }
+      main#index .container .login-card form .btn {
+        background-color: #004d99; }
