--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,4 +8,17 @@ body {
   background: #f5f5f5;
 }
 
+*::-webkit-scrollbar-track {
+  background: rgba(255,255,255,.08);
+}
+*::-webkit-scrollbar-thumb {
+  background-color: rgba(0,0,0,.2);
+}
+*::-webkit-scrollbar {
+  width: 6px!important;
+  height: 6px!important;
+}
+
 @import 'index';
+
+@import 'chat';
