--- a/src/style.css
+++ b/src/style.css
@@ -61,16 +61,16 @@ main#chat {
   @media only screen and (min-width: 993px) {
     main#chat {
       padding-left: 300px; } }
+  main#chat .box {
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
+    background-color: #fff;
+    width: 400px;
+    z-index: 100;
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12); }
   main#chat .groups-list-wrapper {
     flex: 0 0 430px;
     position: relative; }
-    main#chat .groups-list-wrapper .box {
-      border-top-left-radius: 4px;
-      border-top-right-radius: 4px;
-      background-color: #fff;
-      width: 400px;
-      z-index: 100;
-      box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12); }
     main#chat .groups-list-wrapper .groups-list-box {
       position: absolute;
       top: 80px;
@@ -139,3 +139,95 @@ main#chat {
             align-items: center; }
             main#chat .groups-list-wrapper .groups-list-box ul.groups-list li.group .action .group_join--btn {
               margin-top: 6px; }
+  main#chat .chat-windows-wrapper {
+    flex: 1;
+    position: relative;
+    overflow-x: auto;
+    display: flex;
+    align-items: flex-end; }
+    main#chat .chat-windows-wrapper .chat-window {
+      flex: 0 0 400px;
+      margin-left: 15px;
+      margin-right: 15px;
+      height: 87%;
+      display: flex;
+      flex-direction: column; }
+      main#chat .chat-windows-wrapper .chat-window .header {
+        flex: 0 0 50px;
+        display: flex;
+        align-items: center;
+        background: #004d99;
+        border-radius: 4px 4px 0 0;
+        color: white;
+        font-weight: bold;
+        padding: 12px; }
+        main#chat .chat-windows-wrapper .chat-window .header .title {
+          margin-left: 12px;
+          flex: 1;
+          white-space: nowrap;
+          text-overflow: ellipsis;
+          overflow: hidden; }
+        main#chat .chat-windows-wrapper .chat-window .header .close-chat {
+          color: #fff; }
+      main#chat .chat-windows-wrapper .chat-window ul.chat-messages {
+        flex: 1;
+        margin: 0;
+        padding: 10px 20px 0;
+        overflow-y: auto;
+        display: flex;
+        flex-direction: column; }
+        main#chat .chat-windows-wrapper .chat-window ul.chat-messages li.chat-message {
+          position: relative;
+          margin-top: 6px;
+          margin-bottom: 6px;
+          background: #D74B4B;
+          color: #fff;
+          border-radius: 2px;
+          box-shadow: 0px 1px 0px 0px rgba(50, 50, 50, 0.3);
+          margin: 12px 0;
+          padding: 12px; }
+          main#chat .chat-windows-wrapper .chat-window ul.chat-messages li.chat-message:before {
+            content: '';
+            width: 0;
+            height: 0;
+            border-style: solid; }
+          main#chat .chat-windows-wrapper .chat-window ul.chat-messages li.chat-message.them {
+            align-self: flex-start; }
+            main#chat .chat-windows-wrapper .chat-window ul.chat-messages li.chat-message.them:before {
+              border-width: 0 10px 10px 0;
+              border-color: transparent #D74B4B transparent transparent;
+              position: absolute;
+              top: 0;
+              left: -8px; }
+          main#chat .chat-windows-wrapper .chat-window ul.chat-messages li.chat-message.us {
+            align-self: flex-end;
+            background: #354B5E; }
+            main#chat .chat-windows-wrapper .chat-window ul.chat-messages li.chat-message.us:before {
+              border-width: 10px 10px 0 0;
+              border-color: #354B5E transparent transparent transparent;
+              position: absolute;
+              top: 0;
+              right: -8px; }
+      main#chat .chat-windows-wrapper .chat-window .send-message {
+        flex: 0 0 60px;
+        border-top: 1px solid #e0e0e0;
+        background: #e0e0e0;
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+        align-items: center; }
+        main#chat .chat-windows-wrapper .chat-window .send-message i {
+          padding: 0 9px; }
+        main#chat .chat-windows-wrapper .chat-window .send-message input[type="text"] {
+          margin-bottom: 0;
+          border: 0;
+          height: 40px;
+          padding-left: 6px;
+          padding-right: 6px;
+          border-radius: 6px;
+          box-sizing: border-box;
+          background: #fff;
+          box-shadow: 0 0px 1px 0 rgba(0, 0, 0, 0.16), 0 1px 6px 0 rgba(0, 0, 0, 0.12); }
+          main#chat .chat-windows-wrapper .chat-window .send-message input[type="text"]:focus:not([readonly]) {
+            box-shadow: none;
+            border-bottom: 0; }
