--- a/src/scss/_chat.scss
+++ b/src/scss/_chat.scss
@@ -149,6 +149,7 @@ main#chat {
           box-shadow: 0px 1px 0px 0px rgba(50, 50, 50, 0.3);
           margin: 12px 0;
           padding: 12px;
+          min-height: 48px;
           &:before {
             content: '';
             width: 0;
@@ -204,16 +205,6 @@ main#chat {
             border-bottom: 0;
           }
         }
-        // i {
-        //   position: absolute;
-        //   top: 15px;
-        //   &.emotions-icon {
-        //     left: 15px;
-        //   }
-        //   &.attach-icon {
-        //     right: 15px;
-        //   }
-        // }
       }
     }
   }
