--- a/src/style.css
+++ b/src/style.css
@@ -185,7 +185,8 @@ main#chat {
           border-radius: 2px;
           box-shadow: 0px 1px 0px 0px rgba(50, 50, 50, 0.3);
           margin: 12px 0;
-          padding: 12px; }
+          padding: 12px;
+          min-height: 48px; }
           main#chat .chat-windows-wrapper .chat-window ul.chat-messages li.chat-message:before {
             content: '';
             width: 0;
