--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,20 @@ body {
   background: #f5f5f5;
 }
 
+body {
+   font-family: 'Merriweather Sans', sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+.title {
+   font-family: 'Inconsolata';
+} 
+
 *::-webkit-scrollbar-track {
   background: rgba(255,255,255,.08);
 }
@@ -21,4 +35,5 @@ body {
 
 @import 'index';
 
+@import 'sidebar';
 @import 'chat';
