So much work done that i am lost. anyways, tomorow

--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -8,14 +8,19 @@
             margin-right: 12px;
          }
       }
-      &:hover,
-      &.active {
-         a {
-            color: $brand-color;
-         }
+      &:hover {
+         a,
          i {
             color: $brand-color;
          }
+      }
+      &.active {
+         background-color: $lighter-brand-color;
+         a,
+         i {
+            color: #fff;
+         }
+
       }
    }
    li.logo {
