--- a/src/scss/_chat.scss
+++ b/src/scss/_chat.scss
@@ -25,8 +25,8 @@ main#chat {
       .search {
         position: relative;
         flex: 0 0 60px;
-        background-color: #fbfbfb;
-        border-bottom: 1px solid #f5f5f5;
+        background-color: $lighter-brand-color;
+        border-radius: 4px 4px 0 0;
         display: flex;
         align-items: center;
         input[type="search"] {
@@ -55,6 +55,20 @@ main#chat {
         margin: 0;
         flex: 1;
         overflow-y: auto;
+        li.loading,
+        li.error {
+           height: 100%;
+           display: flex;
+           align-items: center;
+           justify-content: center;
+           text-align: center;
+           font-family: 'Inconsolata';
+           font-weight: bold;
+           font-size: 1.4rem;
+        }
+        li.error {
+           color: #d6402d;
+        }
         li.group {
           position: relative;
           display: flex;
@@ -62,6 +76,7 @@ main#chat {
           border-top: 1px solid #f2f2f2;
           padding-top: 12px;
           padding-bottom: 12px;
+          min-height: 100px;
           .avatar {
             padding: 0 15px;
             img {
@@ -75,22 +90,30 @@ main#chat {
             flex-direction: column;
             .title {
               font-weight: bold;
+              color: $brand-color;
+              margin-bottom: 9px;
             }
             .meta {
-              font-weight: 0.8rem;
-              margin-top: 3px;
-              color: rgba(0,0,0,.6);
+               font-size: 0.9rem;
+               color: #005A04;
+               font-weight: bold;
+               i {
+                  font-size: 1.2rem;
+              }
               .users-count {
-                margin-left: 12px;
+                margin-left: 36px;
               }
             }
           }
           .action {
-            padding-right: 15px;
-            flex: 0 0 40px;
+            flex: 0 0 60px;
             display: flex;
             flex-direction: column;
+            justify-content: space-between;
             align-items: center;
+            i {
+               color: #d6402d;
+            }
             .group_join--btn {
               margin-top: 6px;
             }
@@ -139,6 +162,19 @@ main#chat {
         overflow-y: auto;
         display: flex;
         flex-direction: column;
+        li.connecting {
+           height: 100%;
+           display: flex;
+           align-items: center;
+           justify-content: center;
+           text-align: center;
+           font-family: 'Inconsolata';
+           font-weight: bold;
+           font-size: 1.4rem;
+        }
+        li.error {
+           color: #d6402d;
+        }
         li.chat-message {
           position: relative;
           margin-top: 6px;
