added easy and fast searching inside group list.

--- a/src/scss/_chat.scss
+++ b/src/scss/_chat.scss
@@ -119,6 +119,11 @@ main#chat {
             }
           }
         }
+        #holmes-placeholder {
+           padding: 12px;
+           font-weight: bold;
+           text-align: center;
+        }
       }
     }
   }
