--- a/src/scss/_sidebar.scss
+++ b/src/scss/_sidebar.scss
@@ -29,6 +29,7 @@
          height: 100px;
          line-height: 100px;
          font-size: 1.8rem;
+         font-weight: bold;
          color: $brand-color;
          font-family: 'Inconsolata';
          text-align: center;
