--- a/src/style.css
+++ b/src/style.css
@@ -215,6 +215,10 @@ main#chat {
       height: 87%;
       display: flex;
       flex-direction: column; }
+      main#chat .chat-windows-wrapper .chat-window.peek-window .header {
+        background: #FF5964; }
+      main#chat .chat-windows-wrapper .chat-window.message-notification .header {
+        background: #E9724C; }
       main#chat .chat-windows-wrapper .chat-window .header {
         flex: 0 0 50px;
         display: flex;
