news news hai hai

--- a/src/style.css
+++ b/src/style.css
@@ -341,11 +341,13 @@ main#news {
     flex: 1;
     padding: 12px;
     overflow-y: auto; }
-    main#news .content .carousel-control .col {
-      display: flex;
+    main#news .content .carousel-wrapper {
       background: #fff;
       padding: 12px; }
-      main#news .content .carousel-control .col .box {
+    main#news .content #carousel-control {
+      display: flex;
+      margin-bottom: 12px; }
+      main#news .content #carousel-control .box {
         flex: 1;
         background: #e3e3e3;
         margin-left: 6px;
