--- a/src/scss/news/_main.scss
+++ b/src/scss/news/_main.scss
@@ -31,10 +31,13 @@ main#news {
       flex: 1;
       padding: 12px;
       overflow-y: auto;
-      .carousel-control .col {
-         display: flex;
+      .carousel-wrapper {
          background: #fff;
          padding: 12px;
+      }
+      #carousel-control {
+         display: flex;
+         margin-bottom: 12px;
          .box {
             flex: 1;
             background: #e3e3e3;
