--- a/src/style.css
+++ b/src/style.css
@@ -27,6 +27,9 @@ h6,
   width: 6px !important;
   height: 6px !important; }
 
+.toast.error {
+  background-color: #F71735; }
+
 main#index {
   height: 100%;
   padding-bottom: 150px;
