--- a/src/style.css
+++ b/src/style.css
@@ -358,6 +358,39 @@ main#news {
         margin-right: 6px;
         height: 250px; }
 
+#news {
+  background-color: #fff; }
+  #news .news-table table {
+    border-left: 1px solid #e3e3e3;
+    border-right: 1px solid #e3e3e3;
+    border-top: 1px solid #e3e3e3; }
+    #news .news-table table th:first-child,
+    #news .news-table table td:first-child {
+      width: 4rem;
+      text-align: center; }
+    #news .news-table table tr td:nth-child(4) {
+      color: rgba(0, 0, 0, 0.54); }
+    #news .news-table table tr[data-status="Published"] td:nth-child(4) {
+      color: rgba(0, 0, 0, 0.87); }
+    #news .news-table table tr[data-status="Published"] td:nth-child(5) {
+      color: #34a853; }
+    #news .news-table table tr[data-status="UnPublished"] td:nth-child(5) {
+      color: #ea4335; }
+    #news .news-table table tr[data-status="Draft"] td:nth-child(5) {
+      color: #fbbc05; }
+  #news form,
+  #news h4 {
+    padding: 0 4rem; }
+  #news .semi-card {
+    padding: 24px 12px;
+    background-color: #fff;
+    box-shadow: 0 -1px 0 #e5e5e5, 0 0 2px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.24);
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox; }
+    #news .semi-card .input-field {
+      width: 100%; }
+
 main#add-user {
   display: flex;
   align-items: center;
