--- a/src/style.css
+++ b/src/style.css
@@ -404,20 +404,30 @@ main#news {
           color: #fbbc05; }
         #news .news-table table td.actions a.edit_icon {
           color: #4285f4; }
-  #news form,
-  #news h4 {
-    padding: 0 4rem; }
   #news .semi-card {
     padding: 24px 12px;
     background-color: #fff;
-    box-shadow: 0 -1px 0 #e5e5e5, 0 0 2px rgba(0, 0, 0, 0.12), 0 2px 4px rgba(0, 0, 0, 0.24);
+    box-shadow: 0 -1px 0 #e5e5e5, 0 0 1px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.24);
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox; }
     #news .semi-card .input-field {
       width: 100%; }
+  #news h4 {
+    font-weight: bold; }
   #news form .caret {
     z-index: 4; }
+  #news form h5 {
+    color: #004d99;
+    font-weight: bold; }
+  #news form .file-field .btn {
+    background-color: #ededed;
+    color: rgba(0, 0, 0, 0.87); }
+    #news form .file-field .btn:hover {
+      background-color: #ededed; }
+  #news form .file-field .file-path-wrapper {
+    padding-right: 20px;
+    padding-left: 0; }
   #news form input.select-dropdown {
     border-radius: 3px;
     box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.18), 0 1px 2px 0 rgba(0, 0, 0, 0.15);
@@ -426,6 +436,9 @@ main#news {
     border-color: #b1b1b1;
     border: 0;
     text-transform: uppercase; }
+  #news form .submit-btn,
+  #news form .draft-btn {
+    background-color: #004d99; }
 
 main#add-user {
   display: flex;
@@ -434,6 +447,13 @@ main#add-user {
   height: 100%; }
   main#add-user .card {
     width: 600px; }
+
+input:not([type]):focus:not([readonly]), input[type=text]:focus:not([readonly]), input[type=password]:focus:not([readonly]), input[type=email]:focus:not([readonly]), input[type=url]:focus:not([readonly]), input[type=time]:focus:not([readonly]), input[type=date]:focus:not([readonly]), input[type=datetime]:focus:not([readonly]), input[type=datetime-local]:focus:not([readonly]), input[type=tel]:focus:not([readonly]), input[type=number]:focus:not([readonly]), input[type=search]:focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]) {
+  box-shadow: none;
+  border-color: #9e9e9e; }
+
+input:not([type]):focus:not([readonly]) + label, input[type=text]:focus:not([readonly]) + label, input[type=password]:focus:not([readonly]) + label, input[type=email]:focus:not([readonly]) + label, input[type=url]:focus:not([readonly]) + label, input[type=time]:focus:not([readonly]) + label, input[type=date]:focus:not([readonly]) + label, input[type=datetime]:focus:not([readonly]) + label, input[type=datetime-local]:focus:not([readonly]) + label, input[type=tel]:focus:not([readonly]) + label, input[type=number]:focus:not([readonly]) + label, input[type=search]:focus:not([readonly]) + label, textarea.materialize-textarea:focus:not([readonly]) + label {
+  color: #004d99; }
 
 .carousel-list {
   display: flex;
