--- a/src/scss/news/_carousel.scss
+++ b/src/scss/news/_carousel.scss
@@ -8,3 +8,61 @@
       background: white;
    }
 }
+
+.carousel-container {
+       display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 300px;
+    background-color: #394242;
+    .add-news__link {
+      background-color: white;
+      height: 200px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 200px;
+      i {
+         font-size: 6rem;
+         color: #004d99;
+      }
+    }
+}
+
+main#news.carousel .content {
+   padding: 0;
+   .carousel-wrapper {
+      background-color: #394242;
+      height: 480px;
+      .add-btn-col {
+         color: #fff;
+         a.btn {
+            margin-top: 8px;
+            margin-bottom: 4px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 345px;
+            background-color: #fff;
+            i {
+               font-size: 6rem;
+               color: #004d99;
+            }
+         }
+      }
+      .carousel-col {
+         display: flex;
+         justify-content: space-around;
+         flex-wrap: wrap;
+         div {
+            margin: 1%;
+            flex: 0 0 18%;
+            height: 160px;
+            background-color: #fff;
+            &.nothing {
+               background-color: #6b6b6b;
+            }
+         }
+      }
+   }
+}
