--- a/src/style.css
+++ b/src/style.css
@@ -5,18 +5,6 @@ body {
   overflow: hidden;
   background: #f5f5f5; }
 
-body {
-  font-family: 'Merriweather Sans', sans-serif; }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-.title {
-  font-family: 'Inconsolata'; }
-
 *::-webkit-scrollbar-track {
   background: rgba(255, 255, 255, 0.08); }
 
@@ -72,11 +60,6 @@ main#index {
 
 .side-nav.fixed {
   width: 240px; }
-  .side-nav.fixed li a {
-    color: #6a6c6f;
-    font-family: 'Merriweather Sans', sans-serif; }
-    .side-nav.fixed li a i {
-      margin-right: 12px; }
   .side-nav.fixed li:hover a,
   .side-nav.fixed li:hover i {
     color: #004d99; }
@@ -86,14 +69,16 @@ main#index {
     .side-nav.fixed li.active i {
       color: #fff; }
   .side-nav.fixed li.logo {
-    line-height: 100px; }
+    background-color: #fcfcfc;
+    padding-top: 6px;
+    padding-bottom: 6px;
+    margin-bottom: 12px; }
     .side-nav.fixed li.logo a {
-      height: 100px;
-      line-height: 100px;
+      height: 96px;
       font-size: 1.8rem;
       font-weight: bold;
+      text-transform: uppercase;
       color: #004d99;
-      font-family: 'Inconsolata';
       text-align: center; }
 
 main {
@@ -358,87 +343,97 @@ main#news {
         margin-right: 6px;
         height: 250px; }
 
-#news {
-  background-color: #fff; }
-  #news .news-table table {
-    border-left: 1px solid #e3e3e3;
-    border-right: 1px solid #e3e3e3;
-    border-top: 1px solid #e3e3e3;
-    font-family: 'Roboto'; }
-    #news .news-table table th:first-child {
-      width: 4%; }
-    #news .news-table table th:nth-child(2) {
-      width: 6%; }
-    #news .news-table table th:nth-child(3) {
-      width: 60%; }
-    #news .news-table table th:nth-child(4) {
-      width: 10%; }
-    #news .news-table table th:nth-child(5) {
-      width: 10%; }
-    #news .news-table table th:nth-child(6) {
-      width: 10%; }
-    #news .news-table table td:nth-child(3) {
-      font-weight: bold; }
-    #news .news-table table th:first-child,
-    #news .news-table table td:first-child {
-      width: 4rem;
-      text-align: center; }
-    #news .news-table table tr td:nth-child(4) {
-      color: rgba(0, 0, 0, 0.54); }
-    #news .news-table table tr[data-status="Published"] td:nth-child(4) {
-      color: rgba(0, 0, 0, 0.87); }
-    #news .news-table table tr[data-status="Published"] td:nth-child(5) {
-      color: #34a853; }
-    #news .news-table table td {
-      padding: 5px; }
-    #news .news-table table td.actions {
-      width: 180px; }
-      #news .news-table table td.actions a {
-        color: rgba(0, 0, 0, 0.87);
-        margin: 0 8px; }
-        #news .news-table table td.actions a.delete_icon {
-          color: #ff5252; }
-        #news .news-table table td.actions a.publish_icon {
-          color: #34a853; }
-        #news .news-table table td.actions a.preview_icon {
-          color: #fbbc05; }
-        #news .news-table table td.actions a.edit_icon {
-          color: #4285f4; }
-  #news .semi-card {
-    padding: 24px 12px;
-    background-color: #fff;
-    box-shadow: 0 -1px 0 #e5e5e5, 0 0 1px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.24);
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox; }
-    #news .semi-card .input-field {
-      width: 100%; }
-  #news h4 {
+#news #DataTables_Table_0_filter {
+  display: none; }
+
+#news .news-table table {
+  background: #fff none repeat scroll 0 0;
+  border-left: 1px solid #e3e3e3;
+  border-right: 1px solid #e3e3e3;
+  border-top: 1px solid #e3e3e3; }
+  #news .news-table table th:first-child {
+    width: 4%; }
+  #news .news-table table th:nth-child(2) {
+    width: 6%; }
+  #news .news-table table th:nth-child(3) {
+    width: 58%; }
+  #news .news-table table th:nth-child(4) {
+    width: 10%; }
+  #news .news-table table th:nth-child(5) {
+    width: 10%; }
+  #news .news-table table th:nth-child(6) {
+    width: 12%; }
+  #news .news-table table td:nth-child(3) {
     font-weight: bold; }
-  #news form .caret {
-    z-index: 4; }
-  #news form h5 {
-    color: #004d99;
-    font-weight: bold; }
-  #news form .file-field .btn {
-    background-color: #ededed;
+  #news .news-table table td {
+    font-size: 0.9rem; }
+  #news .news-table table th:first-child,
+  #news .news-table table td:first-child {
+    width: 4rem;
+    text-align: center; }
+  #news .news-table table tr td:nth-child(4) {
+    color: rgba(0, 0, 0, 0.54); }
+  #news .news-table table tr[data-status="Published"] td:nth-child(4) {
     color: rgba(0, 0, 0, 0.87); }
-    #news form .file-field .btn:hover {
-      background-color: #ededed; }
-  #news form .file-field .file-path-wrapper {
-    padding-right: 20px;
-    padding-left: 0; }
-  #news form input.select-dropdown {
-    border-radius: 3px;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.18), 0 1px 2px 0 rgba(0, 0, 0, 0.15);
-    padding: 0px 12px;
-    background-color: #ededed;
-    border-color: #b1b1b1;
-    border: 0;
-    text-transform: uppercase; }
-  #news form .submit-btn,
-  #news form .draft-btn {
-    background-color: #004d99; }
+  #news .news-table table tr[data-status="Published"] td:nth-child(5) {
+    color: #004d99; }
+  #news .news-table table td {
+    padding: 5px; }
+  #news .news-table table td.actions {
+    width: 180px; }
+    #news .news-table table td.actions a {
+      color: rgba(0, 0, 0, 0.87);
+      margin: 0 8px; }
+      #news .news-table table td.actions a.delete_icon {
+        color: #ff5252; }
+      #news .news-table table td.actions a.publish_icon {
+        color: #34a853; }
+      #news .news-table table td.actions a.preview_icon {
+        color: #fbbc05; }
+      #news .news-table table td.actions a.edit_icon {
+        color: #4285f4; }
+
+#news .semi-card {
+  padding: 12px;
+  background-color: #fff;
+  box-shadow: 0 -1px 0 #e5e5e5, 0 0 1px rgba(0, 0, 0, 0.12), 0 1px 1px rgba(0, 0, 0, 0.24);
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox; }
+  #news .semi-card .input-field {
+    width: 100%; }
+
+#news h4 {
+  font-weight: bold; }
+
+#news form .caret {
+  z-index: 4; }
+
+#news form h5 {
+  color: #004d99; }
+
+#news form .file-field .btn {
+  background-color: #ededed;
+  color: rgba(0, 0, 0, 0.87); }
+  #news form .file-field .btn:hover {
+    background-color: #ededed; }
+
+#news form .file-field .file-path-wrapper {
+  padding-right: 20px;
+  padding-left: 0; }
+
+#news form input.select-dropdown {
+  border-radius: 3px;
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.18), 0 1px 2px 0 rgba(0, 0, 0, 0.15);
+  padding: 0px 12px;
+  background-color: #ededed;
+  border-color: #b1b1b1;
+  border: 0;
+  text-transform: uppercase; }
+
+#news form .submit-btn,
+#news form .draft-btn {
+  background-color: #004d99; }
 
 main#add-user {
   display: flex;
@@ -455,6 +450,21 @@ input:not([type]):focus:not([readonly]), input[type=text]:focus:not([readonly]),
 input:not([type]):focus:not([readonly]) + label, input[type=text]:focus:not([readonly]) + label, input[type=password]:focus:not([readonly]) + label, input[type=email]:focus:not([readonly]) + label, input[type=url]:focus:not([readonly]) + label, input[type=time]:focus:not([readonly]) + label, input[type=date]:focus:not([readonly]) + label, input[type=datetime]:focus:not([readonly]) + label, input[type=datetime-local]:focus:not([readonly]) + label, input[type=tel]:focus:not([readonly]) + label, input[type=number]:focus:not([readonly]) + label, input[type=search]:focus:not([readonly]) + label, textarea.materialize-textarea:focus:not([readonly]) + label {
   color: #004d99; }
 
+input:disabled:not([type]), input[readonly="readonly"]:not([type]), input[type="text"]:disabled, input[type="text"][readonly="readonly"], input[type="password"]:disabled, input[type="password"][readonly="readonly"], input[type="email"]:disabled, input[type="email"][readonly="readonly"], input[type="url"]:disabled, input[type="url"][readonly="readonly"], input[type="time"]:disabled, input[type="time"][readonly="readonly"], input[type="date"]:disabled, input[type="date"][readonly="readonly"], input[type="datetime"]:disabled, input[type="datetime"][readonly="readonly"], input[type="datetime-local"]:disabled, input[type="datetime-local"][readonly="readonly"], input[type="tel"]:disabled, input[type="tel"][readonly="readonly"], input[type="number"]:disabled, input[type="number"][readonly="readonly"], input[type="search"]:disabled, input[type="search"][readonly="readonly"], textarea.materialize-textarea:disabled, textarea.materialize-textarea[readonly="readonly"] {
+  color: rgba(0, 0, 0, 0.87); }
+
+.dropdown-content li > a, .dropdown-content li > span {
+  color: #004d99; }
+
+::-moz-selection {
+  /* Code for Firefox */
+  color: #fff;
+  background: #3e78b2; }
+
+::selection {
+  color: #fff;
+  background: #3e78b2; }
+
 .carousel-list {
   display: flex;
   align-items: center;
@@ -463,3 +473,50 @@ input:not([type]):focus:not([readonly]) + label, input[type=text]:focus:not([rea
     flex: 0 0 200px;
     height: 120px;
     background: white; }
+
+.carousel-container {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  height: 300px;
+  background-color: #394242; }
+  .carousel-container .add-news__link {
+    background-color: white;
+    height: 200px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 200px; }
+    .carousel-container .add-news__link i {
+      font-size: 6rem;
+      color: #004d99; }
+
+main#news.carousel .content {
+  padding: 0; }
+  main#news.carousel .content .carousel-wrapper {
+    background-color: #394242;
+    height: 480px; }
+    main#news.carousel .content .carousel-wrapper .add-btn-col {
+      color: #fff; }
+      main#news.carousel .content .carousel-wrapper .add-btn-col a.btn {
+        margin-top: 8px;
+        margin-bottom: 4px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 345px;
+        background-color: #fff; }
+        main#news.carousel .content .carousel-wrapper .add-btn-col a.btn i {
+          font-size: 6rem;
+          color: #004d99; }
+    main#news.carousel .content .carousel-wrapper .carousel-col {
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap; }
+      main#news.carousel .content .carousel-wrapper .carousel-col div {
+        margin: 1%;
+        flex: 0 0 18%;
+        height: 160px;
+        background-color: #fff; }
+        main#news.carousel .content .carousel-wrapper .carousel-col div.nothing {
+          background-color: #6b6b6b; }
