--- a/src/scss/news/_main.scss
+++ b/src/scss/news/_main.scss
@@ -87,7 +87,7 @@ main#news {
       
       th:first-child,
       td:first-child {
-         width: 4rem;
+         // width: 4rem;
          text-align: center;
       }
       tr td:nth-child(4) {
