--- a/src/style.css
+++ b/src/style.css
@@ -369,7 +369,6 @@ main#news {
     font-size: 0.9rem; }
   #news .news-table table th:first-child,
   #news .news-table table td:first-child {
-    width: 4rem;
     text-align: center; }
   #news .news-table table tr td:nth-child(4) {
     color: rgba(0, 0, 0, 0.54); }
@@ -465,58 +464,75 @@ input:disabled:not([type]), input[readonly="readonly"]:not([type]), input[type="
   color: #fff;
   background: #3e78b2; }
 
-.carousel-list {
-  display: flex;
-  align-items: center;
-  justify-content: space-around; }
-  .carousel-list .carousel-item {
-    flex: 0 0 200px;
-    height: 120px;
-    background: white; }
-
-.carousel-container {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  height: 300px;
-  background-color: #394242; }
-  .carousel-container .add-news__link {
-    background-color: white;
-    height: 200px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 200px; }
-    .carousel-container .add-news__link i {
-      font-size: 6rem;
-      color: #004d99; }
-
-main#news.carousel .content {
-  padding: 0; }
-  main#news.carousel .content .carousel-wrapper {
-    background-color: #394242;
-    height: 480px; }
-    main#news.carousel .content .carousel-wrapper .add-btn-col {
-      color: #fff; }
-      main#news.carousel .content .carousel-wrapper .add-btn-col a.btn {
-        margin-top: 8px;
-        margin-bottom: 4px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 345px;
-        background-color: #fff; }
-        main#news.carousel .content .carousel-wrapper .add-btn-col a.btn i {
-          font-size: 6rem;
-          color: #004d99; }
-    main#news.carousel .content .carousel-wrapper .carousel-col {
+main#news.carousel .content .carousel-wrapper {
+  background-color: #394242;
+  min-height: 200px; }
+  main#news.carousel .content .carousel-wrapper .row {
+    margin-bottom: 0; }
+  main#news.carousel .content .carousel-wrapper .info-col {
+    color: #fff;
+    text-align: center; }
+    main#news.carousel .content .carousel-wrapper .info-col span {
       display: flex;
-      justify-content: space-around;
-      flex-wrap: wrap; }
-      main#news.carousel .content .carousel-wrapper .carousel-col div {
-        margin: 1%;
-        flex: 0 0 18%;
-        height: 160px;
-        background-color: #fff; }
-        main#news.carousel .content .carousel-wrapper .carousel-col div.nothing {
-          background-color: #6b6b6b; }
+      justify-content: center;
+      align-items: center;
+      height: 160px;
+      width: 100%;
+      padding: 24px;
+      background-color: rgba(255, 255, 255, 0.87);
+      color: rgba(0, 0, 0, 0.54);
+      font-weight: bold; }
+  main#news.carousel .content .carousel-wrapper .carousel_list_col {
+    display: flex;
+    flex-wrap: wrap; }
+    main#news.carousel .content .carousel-wrapper .carousel_list_col .carousel-box {
+      width: 18%;
+      margin-left: 1%;
+      margin-right: 1%;
+      margin-bottom: 12px;
+      height: 160px; }
+      main#news.carousel .content .carousel-wrapper .carousel_list_col .carousel-box .image {
+        height: 150px;
+        position: relative; }
+        main#news.carousel .content .carousel-wrapper .carousel_list_col .carousel-box .image .banner {
+          width: 0;
+          height: 0;
+          border-style: solid;
+          border-width: 45px 45px 0 0;
+          border-color: #ec5d2f transparent transparent transparent; }
+          main#news.carousel .content .carousel-wrapper .carousel_list_col .carousel-box .image .banner .number {
+            position: absolute;
+            top: 6px;
+            left: 6px;
+            color: #fff; }
+          main#news.carousel .content .carousel-wrapper .carousel_list_col .carousel-box .image .banner i {
+            position: absolute;
+            top: 0;
+            right: 0;
+            color: #fff;
+            cursor: pointer; }
+      main#news.carousel .content .carousel-wrapper .carousel_list_col .carousel-box .carousel-headline {
+        color: #fff;
+        font-weight: bold;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        overflow: hidden; }
+
+main#news.carousel .content .save-carousel {
+  margin-top: 12px;
+  margin-bottom: 12px;
+  background: #004d99;
+  font-weight: bold; }
+
+main#news.carousel .content .carousel-table .actions a {
+  margin: 0;
+  padding-left: 0;
+  padding-right: 0;
+  text-transform: uppercase;
+  font-weight: bold; }
+  main#news.carousel .content .carousel-table .actions a.add-carousel-btn {
+    color: #004d99; }
+  main#news.carousel .content .carousel-table .actions a.remove-carousel-btn {
+    color: #ec5d2f; }
+  main#news.carousel .content .carousel-table .actions a:hover {
+    background-color: transparent; }
